--- a/app/src/main/res/layout/activity_speed_math.xml
+++ b/app/src/main/res/layout/activity_speed_math.xml
@@ -26,7 +26,8 @@
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:imeOptions="actionDone"/>
 
     <TextView
         android:id="@+id/correctText"
