Stated making a game creation object which will be parcelable

--- a/app/src/main/res/layout/activity_intro_screen.xml
+++ b/app/src/main/res/layout/activity_intro_screen.xml
@@ -12,5 +12,6 @@
         android:layout_height="wrap_content"
         android:text="New Custom Single"
         tools:layout_editor_absoluteX="109dp"
-        tools:layout_editor_absoluteY="146dp" />
+        tools:layout_editor_absoluteY="146dp"
+        />
 </android.support.constraint.ConstraintLayout>
