--- a/app/src/main/res/layout/activity_new_custom_game.xml
+++ b/app/src/main/res/layout/activity_new_custom_game.xml
@@ -1,33 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".NewCustomGameActivity">
 
-    <android.support.design.widget.AppBarLayout
+
+    <TextView
+        android:id="@+id/TVrange"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:text="Please enter the range:" />
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+    <EditText
+        android:id="@+id/ETlow"
+        android:layout_width="match_parent"
+        android:layout_height="166dp"
+        android:ems="10"
+        android:hint="low"
+        android:inputType="number"
+        app:layout_constraintTop_toBottomOf="@+id/TVrange"/>
 
-    </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_new_custom_game" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/EThigh"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:ems="10"
+        android:hint="high"
+        android:inputType="number"
+        app:layout_constraintTop_toBottomOf="@+id/ETlow"/>
 
-</android.support.design.widget.CoordinatorLayout>
+    <Button
+        android:id="@+id/Bcreate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Create Game!"
+        tools:text="Create Game!"
+        app:layout_constraintTop_toBottomOf="@+id/EThigh"/>
+
+</android.support.constraint.ConstraintLayout>
