--- a/app/src/main/res/layout/activity_speed_math.xml
+++ b/app/src/main/res/layout/activity_speed_math.xml
@@ -55,4 +55,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/correctText" />
 
+    <Button
+        android:id="@+id/Bsave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save"
+        tools:layout_editor_absoluteX="279dp"
+        tools:layout_editor_absoluteY="231dp" />
+
+
 </android.support.constraint.ConstraintLayout>
