--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -13,4 +13,12 @@
         android:text="New Custom Single Game"
         tools:layout_editor_absoluteX="88dp"
         tools:layout_editor_absoluteY="142dp" />
+
+    <Button
+        android:id="@+id/Bresume"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="resume"
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="248dp" />
 </android.support.constraint.ConstraintLayout>
