--- a/app/src/main/res/layout/activity_all_scores.xml
+++ b/app/src/main/res/layout/activity_all_scores.xml
@@ -13,4 +13,22 @@
         android:text="Tries: "
         tools:layout_editor_absoluteX="87dp"
         tools:layout_editor_absoluteY="92dp" />
+
+    <TextView
+        android:id="@+id/TVequations"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="equations"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TVtotal"/>
+
+    <TextView
+        android:id="@+id/TVattempts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="resume"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TVequations"/>
 </android.support.constraint.ConstraintLayout>
