added the ability to create a game that will still advance if you put in the wrong answer and outputs a different string in the score activity that shows what you answered

--- a/app/src/main/res/layout/activity_new_custom_game.xml
+++ b/app/src/main/res/layout/activity_new_custom_game.xml
@@ -79,13 +79,21 @@
         android:checked="true"
         app:layout_constraintTop_toBottomOf="@+id/CBmul" />
 
+    <CheckBox
+        android:id="@+id/CBwrong"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Allow Wrong"
+        android:checked="false"
+        app:layout_constraintTop_toBottomOf="@+id/CBhint" />
+
     <Button
         android:id="@+id/Bcreate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Create Game!"
         tools:text="Create Game!"
-        app:layout_constraintTop_toBottomOf="@+id/CBhint"/>
+        app:layout_constraintTop_toBottomOf="@+id/CBwrong"/>
 
 
 
